--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1679,7 +1679,7 @@ en:
     - Fri
     - Sat
     abbr_month_names:
-    -
+    - 
     - Jan
     - Feb
     - Mar
@@ -1705,7 +1705,7 @@ en:
       long: "%B %d, %Y"
       short: "%b %d"
     month_names:
-    -
+    - 
     - January
     - February
     - March
@@ -2806,6 +2806,16 @@ en:
         well as other matters set forth therein and which explains how and for what
         purposes we collect, use, retain, disclose and safeguard the information you
         provide to us.
+    where:
+      bike_index_partners: Bike Index partners
+      if_you_would_like_to_join_html: If you're a bike shop and would like to join
+        us, check out our %{signup_link}.
+      international_partner_organizations: International Partner organizations
+      show_location_on_map: Show %{location_name} on map
+      sign_up_your_organization: Sign up your organization
+      signup_page: signup page
+      us_partner_organizations: US Partner organizations
+      website_for_organization: "%{org_name} website"
   landing_pages:
     ambassadors_current:
       after_a_couple_of_recoveries_i_got_hooked: >-
