--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3229,6 +3229,22 @@ en:
       pinhead_locking_skewer_key: Pinhead locking skewer key
       small_kryptonite_key: Small Kryptonite key
       update_the_lock: Update the lock!
+    lock_home:
+      add_a_new_lock: Add a new lock
+      any_lock_information_you_enter_on_bike_in: Any lock information you enter on
+        Bike Index is private and visible only to you.
+      if_you_want_you_can_save_serial_html: >-
+        If you want, you can <strong>save the serial numbers of your keys</strong>
+        on Bike Index&mdash;so you won't be out of luck if you lose them.
+      lock_keys_often_have_serial_numbers_so_yo: >-
+        Lock keys often have serial numbers, so you can order replacements if you
+        lose the keys.
+      lock_type: Lock Type
+      manufacturer: Manufacturer
+      save_information_about_a_lock: Save information about a lock
+      save_information_about_your_bike_lock: Save information about your bike lock!
+      you_can_also_record_your_lock_html: You can also <strong>record your lock combinations</strong>.
+      your_locks: Your locks
   meta_descriptions:
     bikes_index: Search for bikes that have been registered on Bike Index
     bikes_new: >-
