--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -3231,6 +3231,7 @@ en:
       large_kryptonite_key: Large Kryptonite key
       lock_type: Lock type
       other_lock_manufacturer: Other lock manufacturer
+      pinhead_key: Pinhead key
       pinhead_locking_skewer_key: Pinhead locking skewer key
       small_kryptonite_key: Small Kryptonite key
       update_the_lock: Update the lock!
